<resources>
    <string name="app_name">智慧POS</string>
    <string name="network_loading">正在加载中...</string>
    <string name="network_error">网络不给力，请检查网络设置</string>
    <string name="common_onfail">访问失败</string>
    <string name="common_request_fail">服务器错误</string>
    <string name="common_error_parse">解析异常</string>
    <string name="arise_exception">亲，出现异常了</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="exit">退出</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="submit">提交</string>
    <string name="next_step">下一步</string>
    <string name="retry">重新获取</string>
    <string name="activate_app">激活当前应用</string>
    <string name="activate_app_company_name">所属企业：</string>
    <string name="activate_app_code_hint">输入N位数字激活码</string>
    <string name="activate_app_get_code">获取激活码？</string>
    <string name="verify_phone">验证手机号</string>
    <string name="verify_phone_number_hint">请输入手机号</string>
    <string name="verify_phone_code_hint">输入验证码</string>
    <string name="verify_phone_get_code">获取验证码</string>
    <string name="equipment_imei">设备IMEI:</string>
    <string name="enter_phone">请输入手机号</string>
    <string name="enter_password">请输入密码</string>
    <string name="forget_pwd">忘记密码？</string>
    <string name="login">登录</string>
    <string name="reset_new_pwd">设置新密码</string>
    <string name="new_pwd">新密码</string>
    <string name="confirm_new_pwd">确认新密码</string>
    <string name="different_pwd">两次输入的密码不一致，请检查</string>
    <string name="finish">完成</string>
    <string name="string_choose_store">绑定门店</string>
    <string name="hint_user_number">就餐人数</string>
    <string name="hint_user">会员</string>
    <string name="hint_waiter">服务员</string>
    <string name="please_select">请选择</string>
    <string name="reserve_order">预订单</string>
    <string name="reserve_order_id">#1</string>
    <string name="confirm_open_order">确认开单</string>
    <string name="select_table">选择桌台</string>
    <string name="reset">重置</string>
    <string name="multiple_select">筛选</string>
    <string name="tobe_confirm">待确认订单</string>
    <string name="receive_order">接单</string>
    <string name="refuse_order">拒绝</string>
    <string name="hint_user_phone">手机号:</string>
    <string name="hint_custom_num">人数:</string>
    <string name="hint_reserve_arrive_time">预约到店时间:</string>
    <string name="hint_table_remark">餐台需求:</string>
    <string name="hint_respect_name">尊称:</string>
    <string name="hint_source">来源:</string>
    <string name="hint_enterprise_company">企业单位:</string>
    <string name="hint_order_id">本店单号:</string>
    <string name="hint_create_time">下单时间:</string>
    <string name="table_reserve_query">桌台预定查询</string>
    <string name="hint_lunch">午餐:</string>
    <string name="lunch">午餐</string>
    <string name="hint_supper">晚餐:</string>
    <string name="supper">晚餐</string>
    <string name="table_number">桌次</string>
    <string name="room_number">包房003</string>
    <string name="hint_reserve_empty">当日无预定~</string>
    <string name="hint_title_order_number">预定</string>
    <string name="custom_arrive">客人已到达</string>
    <string name="man">人</string>
    <string name="symbol_jin">#</string>
    <string name="home_company_name">红火台餐饮云服务有限公司</string>
    <string name="home_company_phone">400-0000-0000</string>
    <string name="string_get_foregift">收预定押金</string>
    <string name="string_input_order_info">顾客预订录入</string>
    <string name="string_man">先生</string>
    <string name="string_lady">女士</string>
    <string name="string_commit">提交</string>
    <string name="hint_arrive_shop_time">到店时间</string>
    <string name="string_choose_arrive_time">选择到店时间</string>
    <string name="string_table">桌台</string>
    <string name="string_number_of_people">人数</string>
    <string name="string_respect_name">尊称</string>
    <string name="string_sex">性别</string>
    <string name="string_phone_number">手机号</string>
    <string name="hint_choose_table">选择桌台</string>
    <string name="hint_input_guests_num">输入就餐人数</string>
    <string name="hint_guests_respect_name">输入顾客的尊称</string>
    <string name="hint_input_phone_number">请输入手机号</string>
    <string name="string_remarks">备注</string>
    <string name="hint_customer_requirement">输入顾客的就餐要求</string>
    <string name="string_not_necessary">（非必填）</string>
    <string name="string_choose_waiter">选择服务员</string>
    <string name="string_confirm">确定</string>
    <string name="book_no_data">当日无预定~</string>
    <string name="order_status_all">全部</string>
    <string name="order_status_accept">已接单</string>
    <string name="order_status_arrive">已到店</string>
    <string name="order_status_cancel">取消</string>
    <string name="loading_note">拼命加载中</string>
    <string name="no_more_note">亲！没有更多了</string>
    <string name="packing_info">外带信息</string>
    <string name="packing_status_all">全部</string>
    <string name="packing_status_out_standing">未结账</string>
    <string name="packing_status_checked_out">结清</string>
    <string name="string_empty_dishes">该分类下暂无菜品~联系管理员添加。</string>
    <string name="string_pay_successful">已结</string>
    <string name="string_wait_pay">未结账</string>
    <string name="name">姓名</string>
    <string name="wm_serial_number">外卖编号</string>
    <string name="phone">电话</string>
    <string name="address">地址</string>
    <string name="hint_enter_receiver_name">请填写收餐人姓名</string>
    <string name="hint_enter_wm_serial_number">请填写外卖编号</string>
    <string name="take_out_open_order">外卖开单</string>
    <string name="hint_enter_receiver_phone">请填写收餐人的手机号</string>
    <string name="hint_enter_receiver_address">例：北京海淀区中关村苏州街29号维亚大厦12层</string>
    <string name="hint_enter_dinner_number">请确认就餐人数</string>
    <string name="deliver_time">送餐时间</string>
    <string name="reserve_deliver_time">预约送餐</string>
    <string name="deliver_dinner_right_now">立即送餐</string>
    <string name="please_select_deliver_time">请选择预约送餐时间</string>
    <string name="take_out_refund">外卖退款处理</string>
    <string name="refund_reason">退款原因</string>
    <string name="other_reason">其它原因</string>
    <string name="please_enter_other_reasons">请输入其他原因</string>
    <string name="confirm_refund">确认退款</string>
    <string name="refund">退款</string>
    <string name="dinner_number">就餐人数</string>
    <string name="phone_pwd_error">手机号和密码输入格式不正确</string>
    <string name="receiver_name_empty">收餐人姓名不能为空</string>
    <string name="receiver_address_empty">收餐人地址不能为空</string>
    <string name="phone_error">手机号输入格式不正确,请检查</string>
    <string name="reserve_time_error">预定时间不能为空</string>
    <string name="take_out_company_error">请选择外卖公司</string>
    <string name="wm_serial_number_error">请输入外卖编号</string>
    <string name="take_out_company_empty">没有符合条件的外卖公司，不能开单</string>
    <string name="wm_company_empty">没有符合条件的外卖公司，不能筛选</string>
    <string name="receiver_num_empty">就餐人数不能为空</string>
    <string name="receiver_num_zero">就餐人数不能为零</string>
    <string name="canteen_billing">开单</string>
    <string name="canteen_billing_confirm">确认开单</string>
    <string name="dinner_number_hint">输入就餐人数</string>
    <string name="dinner_member">会员</string>
    <string name="dinner_member_hint">请输入会员手机号</string>
    <string name="dinner_waiter">服务员</string>
    <string name="dinner_waiter_hint">请选择</string>
    <string name="dinner_pre_order">预订单</string>
    <string name="dinner_remarks">整单备注</string>
    <string name="dinner_remarks_hint">输入备注信息</string>
    <string name="clear_table">顾客已离店，餐台清理完毕。</string>
    <string name="waiter_list_empty">本店服务员列表为空</string>
    <string name="total_meal_area">全部餐区</string>
    <string name="total">全部</string>
    <string name="free">空闲</string>
    <string name="settle">结清</string>
    <string name="book">预订</string>
    <string name="occupy">占用</string>
    <string name="locked">锁定</string>
    <string name="table_turn">转台</string>
    <string name="table_merge">并台</string>
    <string name="table_put_together">拼桌</string>
    <string name="table_clear">清台</string>
    <string name="abandon">放弃</string>
    <string name="dishes_no_data">还没有点菜哦~</string>
    <string name="order_no_data">今天还没有订单哦~</string>
    <string name="user_phone_error">会员手机号格式错误</string>
    <string name="waiter_name_empty">服务员不能为空</string>
    <string name="bind_shop">请绑定门店</string>
    <string name="sunday">日</string>
    <string name="monday">一</string>
    <string name="tuesday">二</string>
    <string name="wednesday">三</string>
    <string name="thursday">四</string>
    <string name="friday">五</string>
    <string name="saturday">六</string>
    <string name="order_no_detail">开通易企餐服务，可以获得更多订单哦~</string>
    <string name="empty_msg">红火台餐饮云服务有限公司</string>
    <string name="empty_msg_other">400-0000-0000</string>
    <string name="title_choose_table">转入桌台选择</string>
    <string name="take_out_all">全部</string>
    <string name="take_out_no_order">未下单</string>
    <string name="take_out_place_order">已下单</string>
    <string name="take_out_checked_out">已结账</string>
    <string name="take_out_refunded">已退款</string>
    <string name="change">换一换(1/2)</string>
    <string name="order_overdue">预约过期关闭</string>
    <string name="RMB_symbol">¥</string>
    <string name="well_no">#</string>
    <string name="multiply">x</string>
    <string name="big_part">[大份]</string>
    <string name="hint_dish_count">数量:</string>
    <string name="hint_dish_cookery">做法:</string>
    <string name="hint_dish_remark">备注:</string>
    <string name="hint_dish_weight">重量:</string>
    <string name="hint_dish_price">时价:</string>
    <string name="hint_dish_norms">规格:</string>
    <string name="hot_sale">热销</string>
    <string name="recommend">推荐</string>
    <string name="chief_recommend">主厨推荐</string>
    <string name="other_request">其他要求</string>
    <string name="dish_taste">微麻、微辣</string>
    <string name="dish_weight_unit">斤</string>
    <string name="hint_input_weight">输入重量</string>
    <string name="hint_input_price">输入时价</string>
    <string name="unset_price">未设置时价</string>
    <string name="dish_vegetable">素菜</string>
    <string name="dish_meat">荤菜</string>
    <string name="beverage">饮品</string>
    <string name="main_course">主食</string>
    <string name="selected">已选</string>
    <string name="set_detail_option">套餐明细选择</string>
    <string name="commend_detail_set">推荐明细</string>
    <string name="dish_selected">已选菜品</string>
    <string name="add_price">加价</string>
    <string name="add_to_order">加入菜单(</string>
    <string name="unBracket">)</string>
    <string name="limit_select">限点</string>
    <string name="part">份</string>
    <string name="string_operation_paltform">红火台餐饮云服务运营平台</string>
    <string name="string_add_temp_dish">添加临时菜</string>
    <string name="string_input_dish_name">输入菜品名称</string>
    <string name="hint_dish_name">菜品名称</string>
    <string name="hint_sale_price">售价</string>
    <string name="string_input_sale_price">输入销售金额</string>
    <string name="input_dish_count">请输入菜品数量</string>
    <string name="input_dish_cookery">请选择菜品做法</string>
    <string name="input_dish_remark">请选择菜品备注</string>
    <string name="input_dish_weight">请设置菜品重量，范围0.00-99.99</string>
    <string name="input_dish_price">请设置菜品价格，范围0.00-9999.99</string>
    <string name="input_dish_taste">请选择菜品口味</string>
    <string name="input_dish_standard">请选择菜品规格</string>
    <string name="string_order_dishes">去点菜</string>
    <string name="string_refund">退款</string>
    <string name="string_late_make_bill">补打账单</string>
    <string name="string_go_settle_amount">去结账</string>
    <string name="tip_delete_dish">确认删除该菜品吗？</string>
    <string name="tip_clear_dishes">确认清空当前已选菜品？</string>
    <string name="tip_cancel_gift_dish">确认取消赠送吗？</string>
    <string name="tip_delete_no_order_dishes">确认删除未下单菜品吗？</string>
    <string name="tip_place_order_success">下单成功</string>
    <string name="tip_update_count_success">修改数量成功</string>
    <string name="tip_update_dish_success">修改菜品成功</string>
    <string name="tip_delete_dish_success">删除成功</string>
</resources>