<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_white_radius_4">

    <include
        android:id="@+id/inc_title"
        layout="@layout/inc_dialog_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/rb_confirm"
        android:layout_below="@+id/inc_title"
        android:layout_marginBottom="@dimen/px_80">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <com.yonyou.hhtpos.widgets.DialogInputView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:inputHint="@string/dinner_number_hint"
                app:marginLeft="80"
                app:marginRight="80"
                app:marginTop="40"
                app:titleText="@string/dinner_number" />

            <com.yonyou.hhtpos.widgets.DialogInputView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:inputHint="@string/dinner_member_hint"
                app:marginLeft="80"
                app:marginRight="80"
                app:marginTop="30"
                app:titleText="@string/dinner_member" />

            <com.yonyou.hhtpos.widgets.DialogInputView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:inputHint="@string/dinner_waiter_hint"
                app:inputMode="2"
                app:marginLeft="80"
                app:marginRight="80"
                app:marginTop="30"
                app:titleText="@string/dinner_waiter" />

            <com.yonyou.hhtpos.widgets.DialogInputView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:inputMode="1"
                app:inputText="YD00001"
                app:marginLeft="80"
                app:marginRight="80"
                app:marginTop="30"
                app:titleText="@string/dinner_pre_order" />

            <com.yonyou.hhtpos.widgets.DialogInputView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:inputHeight="110"
                app:inputHint="@string/dinner_remarks_hint"
                app:marginLeft="80"
                app:marginRight="80"
                app:marginTop="30"
                app:titleText="@string/dinner_remarks" />

        </LinearLayout>
    </ScrollView>


    <RadioButton
        android:id="@+id/rb_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bg_red_bottom_radius_4"
        android:button="@null"
        android:checked="true"
        android:gravity="center"
        android:padding="@dimen/px_20"
        android:text="@string/canteen_billing_confirm"
        android:textColor="@drawable/rb_next_step_txt"
        android:textSize="@dimen/sp_28" />
</RelativeLayout>
