<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_white_radius_4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/rb_next_step"
        android:orientation="vertical">

        <include layout="@layout/inc_dialog_title" />

        <com.yonyou.hhtpos.widgets.DialogInputView
            android:id="@+id/input_dish_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/px_40"
            app:titleText="@string/hint_dish_name"
            app:inputMode="0"
            app:inputHint="@string/string_input_dish_name" />

        <com.yonyou.hhtpos.widgets.DialogInputView
            android:id="@+id/input_dish_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/px_70"
            android:layout_marginTop="@dimen/px_28"
            app:titleText="@string/hint_sale_price"
            app:inputMode="0"
            app:inputHint="@string/string_input_sale_price" />

    </LinearLayout>

    <RadioButton
        android:id="@+id/rb_confirm_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bg_red_bottom_radius_4"
        android:button="@null"
        android:checked="true"
        android:gravity="center"
        android:padding="@dimen/px_20"
        android:text="@string/string_confirm"
        android:textColor="@drawable/rb_next_step_txt"
        android:textSize="@dimen/sp_28" />
</RelativeLayout>

