<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/px_598"
    android:layout_height="match_parent"
    android:background="@drawable/bg_white_side_white_4"
    android:orientation="vertical">


    <include layout="@layout/inc_dialog_title" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_1"
        android:background="@color/color_c4c4c4"></View>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/px_80"
        android:layout_marginRight="@dimen/px_80"
        android:layout_marginTop="@dimen/px_42"
        android:layout_weight="1"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/px_17"
                android:text="@string/hint_arrive_shop_time"
                android:textColor="@color/color_222222"
                android:textSize="@dimen/sp_24" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/px_30"
                android:background="@drawable/bg_side_gray_d8_4"
                android:hint="@string/string_choose_arrive_time"
                android:padding="@dimen/px_12"
                android:textColorHint="@color/color_cccccc"
                android:textSize="@dimen/sp_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/px_17"
                android:text="@string/string_table"
                android:textColor="@color/color_222222"
                android:textSize="@dimen/sp_24" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/px_30"
                android:background="@drawable/bg_side_gray_d8_4"
                android:hint="@string/hint_choose_table"
                android:padding="@dimen/px_12"
                android:textColorHint="@color/color_cccccc"
                android:textSize="@dimen/sp_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/px_17"
                android:text="@string/string_number_of_people"
                android:textColor="@color/color_222222"
                android:textSize="@dimen/sp_24" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/px_30"
                android:background="@drawable/bg_side_gray_d8_4"
                android:hint="@string/hint_input_guests_num"
                android:padding="@dimen/px_12"
                android:textColorHint="@color/color_cccccc"
                android:textSize="@dimen/sp_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/px_17"
                android:text="@string/string_respect_name"
                android:textColor="@color/color_222222"
                android:textSize="@dimen/sp_24" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/px_30"
                android:background="@drawable/bg_side_gray_d8_4"
                android:hint="@string/hint_guests_respect_name"
                android:padding="@dimen/px_12"
                android:textColorHint="@color/color_cccccc"
                android:textSize="@dimen/sp_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/px_17"
                android:text="@string/string_sex"
                android:textColor="@color/color_222222"
                android:textSize="@dimen/sp_24" />

            <RadioGroup
                android:id="@+id/rg_sex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/px_30"
                android:background="@drawable/bg_side_gray_d8_4"
                android:orientation="horizontal"
                android:padding="@dimen/px_4">

                <RadioButton
                    android:id="@+id/rb_man"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_sex_btn_selector"
                    android:button="@null"
                    android:checked="true"
                    android:gravity="center"
                    android:padding="@dimen/px_12"
                    android:text="@string/string_man"
                    android:textColor="@drawable/text_color_sex_selector"
                    android:textSize="@dimen/px_22" />

                <RadioButton
                    android:id="@+id/rb_women"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_sex_btn_selector"
                    android:button="@null"
                    android:gravity="center"
                    android:padding="@dimen/px_12"
                    android:text="@string/string_lady"
                    android:textColor="@drawable/text_color_sex_selector"
                    android:textSize="@dimen/px_22" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/px_17"
                android:hint="@string/hint_input_phone_number"
                android:text="@string/string_phone_number"
                android:textColor="@color/color_222222"
                android:textSize="@dimen/sp_24" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/px_30"
                android:background="@drawable/bg_side_gray_d8_4"
                android:hint="@string/string_choose_arrive_time"
                android:padding="@dimen/px_12"
                android:textColorHint="@color/color_cccccc"
                android:textSize="@dimen/sp_24" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/px_17"
                    android:text="@string/string_remarks"
                    android:textColor="@color/color_222222"
                    android:textSize="@dimen/sp_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/px_17"
                    android:layout_marginLeft="@dimen/px_12"
                    android:text="@string/string_not_necessary"
                    android:textColor="@color/color_cccccc"
                    android:textSize="@dimen/sp_24" />
            </LinearLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/px_30"
                android:background="@drawable/bg_side_gray_d8_4"
                android:hint="@string/hint_customer_requirement"
                android:padding="@dimen/px_12"
                android:textColorHint="@color/color_cccccc"
                android:textSize="@dimen/sp_24" />

        </LinearLayout>

    </ScrollView>

    <RadioButton
        android:id="@+id/rb_next_step"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/rb_next_step_bg"
        android:button="@null"
        android:checked="true"
        android:gravity="center"
        android:padding="@dimen/px_20"
        android:text="@string/string_commit"
        android:textColor="@drawable/rb_next_step_txt"
        android:textSize="@dimen/sp_28" />
</LinearLayout>
