<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/px_620"
    android:layout_height="@dimen/px_775"
    android:background="@color/sr_window_background">
    <LinearLayout
        android:id="@+id/ll_content_open_order"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_775"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="开单（广州厅）"
                android:textSize="@dimen/sp_30"
                android:textColor="@color/color_222222"
                android:layout_marginTop="@dimen/px_24"
                android:layout_marginBottom="@dimen/px_24"
                android:gravity="center"/>
            <ImageView
                android:id="@+id/iv_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_close"
                android:layout_marginTop="@dimen/px_27"
                android:layout_marginRight="@dimen/px_30"
                android:layout_gravity="right"/>
        </FrameLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_1"
        android:background="@color/color_c4c4c4"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/px_80"
        android:layout_marginRight="@dimen/px_90"
        android:layout_gravity="center">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_user_number"
            android:textSize="@dimen/sp_24"
            android:textColor="@color/color_222222"
            android:layout_marginTop="@dimen/px_40"/>

        <EditText
            android:id="@+id/et_user_number"
            android:layout_width="@dimen/px_450"
            android:layout_height="@dimen/px_50"
            android:layout_marginTop="@dimen/px_14"
            android:hint="@string/hint_input_guests_num"
            android:inputType="number"
            android:textColorHint="@color/color_cccccc"
            android:paddingLeft="@dimen/px_10"
            android:gravity="center_vertical"
            android:background="@drawable/bg_gray_side_gray"
            android:textSize="@dimen/sp_24"
            android:clickable="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_user"
            android:textSize="@dimen/sp_24"
            android:textColor="@color/color_222222"
            android:layout_marginTop="@dimen/px_30"/>

        <EditText
            android:id="@+id/et_user_phone"
            android:layout_width="@dimen/px_450"
            android:layout_height="@dimen/px_50"
            android:layout_marginTop="@dimen/px_14"
            android:hint="@string/dinner_member_hint"
            android:inputType="phone"
            android:maxLength="11"
            android:textColorHint="@color/color_cccccc"
            android:paddingLeft="@dimen/px_10"
            android:gravity="center_vertical"
            android:background="@drawable/bg_gray_side_gray"
            android:textSize="@dimen/sp_24"
            android:clickable="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_waiter"
            android:textSize="@dimen/sp_24"
            android:textColor="@color/color_222222"
            android:layout_marginTop="@dimen/px_30"/>

        <EditText
            android:id="@+id/et_waiter"
            android:layout_width="@dimen/px_450"
            android:layout_height="@dimen/px_50"
            android:layout_marginTop="@dimen/px_14"
            android:hint="@string/please_select"
            android:textColorHint="@color/color_cccccc"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/px_10"
            android:background="@drawable/bg_gray_side_gray"
            android:drawableRight="@drawable/ic_select"
            android:paddingRight="@dimen/px_10"
            android:textSize="@dimen/sp_24"
            android:focusable="false"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dinner_remarks"
            android:textSize="@dimen/sp_24"
            android:textColor="@color/color_222222"
            android:layout_marginTop="@dimen/px_30"/>

        <EditText
            android:id="@+id/et_dinner_remark"
            android:layout_width="@dimen/px_450"
            android:layout_height="@dimen/px_110"
            android:layout_marginTop="@dimen/px_14"
            android:hint="@string/dinner_remarks_hint"
            android:textColorHint="@color/color_cccccc"
            android:paddingLeft="@dimen/px_10"
            android:paddingTop="@dimen/px_10"
            android:gravity="top"
            android:background="@drawable/bg_gray_4"
            android:textSize="@dimen/sp_24"
            android:maxLength="20"
            android:clickable="true"/>
    </LinearLayout>
    </LinearLayout>
    <RadioButton
        android:id="@+id/tv_confirm_open_order"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_70"
        android:background="@drawable/bg_red_4_selector"
        android:button="@null"
        android:gravity="center"
        android:text="@string/confirm_open_order"
        android:textSize="@dimen/px_28"
        android:textColor="@color/color_FFFFFF"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>

